boom/measurements/verilator-large-O3/compile-time-warmup-2.txt
START: Current timestamp in milliseconds: 1731323139532
GROUP: verilator SUBGROUP: firtool COMMAND: firtool --lowering-options=disallowLocalVariables /home/bea/Research/paper-evals/arc-tests/boom//./build/verilator-large-O3-compile-time-warmup-2//boom.fir -o /home/bea/Research/paper-evals/arc-tests/boom//./build/verilator-large-O3-compile-time-warmup-2//boom.sv
/home/bea/Research/paper-evals/arc-tests/boom//./build/verilator-large-O3-compile-time-warmup-2//boom.fir:1:16: error: FIRRTL version must be >=2.0.0
FIRRTL version 1.1.0
               ^

 Performance counter stats for '/usr/local/bin/firtool --lowering-options=disallowLocalVariables,mitigateVivadoArrayIndexConstPropBug /home/bea/Research/paper-evals/arc-tests/boom//./build/verilator-large-O3-compile-time-warmup-2//boom.fir -o /home/bea/Research/paper-evals/arc-tests/boom//./build/verilator-large-O3-compile-time-warmup-2//boom.sv':

             31.44 msec task-clock:u                     #    0.984 CPUs utilized             
                 0      context-switches:u               #    0.000 /sec                      
                 0      cpu-migrations:u                 #    0.000 /sec                      
             2,726      page-faults:u                    #   86.693 K/sec                     
        63,857,161      cycles:u                         #    2.031 GHz                         (14.24%)
         6,471,371      stalled-cycles-frontend:u        #   10.13% frontend cycles idle        (14.10%)
       165,861,680      instructions:u                   #    2.60  insn per cycle            
                                                  #    0.04  stalled cycles per insn     (22.38%)
        37,004,373      branches:u                       #    1.177 G/sec                       (31.92%)
           596,860      branch-misses:u                  #    1.61% of all branches             (41.49%)
        73,809,136      L1-dcache-loads:u                #    2.347 G/sec                       (47.60%)
         9,586,851      L1-dcache-load-misses:u          #   12.99% of all L1-dcache accesses   (47.73%)
   <not supported>      LLC-loads:u                                                           
   <not supported>      LLC-load-misses:u                                                     
         1,308,077      L1-icache-loads:u                #   41.600 M/sec                       (47.70%)
             9,884      L1-icache-load-misses:u          #    0.76% of all L1-icache accesses   (47.70%)
           348,567      dTLB-loads:u                     #   11.085 M/sec                       (47.67%)
            28,049      dTLB-load-misses:u               #    8.05% of all dTLB cache accesses  (47.73%)
               299      iTLB-loads:u                     #    9.509 K/sec                       (39.43%)
             1,286      iTLB-load-misses:u               #  430.10% of all iTLB cache accesses  (29.92%)
         1,118,254      L1-dcache-prefetches:u           #   35.563 M/sec                       (20.38%)
   <not supported>      L1-dcache-prefetch-misses:u                                           

       0.031958318 seconds time elapsed

       0.024753000 seconds user
       0.007068000 seconds sys


GROUP: verilator SUBGROUP: verilator
%Error: Cannot find file containing module: '/home/bea/Research/paper-evals/arc-tests/boom/./build/verilator-large-O3-compile-time-warmup-2/boom.sv'
%Error: This may be because there's no search path specified with -I<dir>.
        ... Looked in:
             /home/bea/Research/paper-evals/arc-tests/boom/./build/verilator-large-O3-compile-time-warmup-2/boom.sv
             /home/bea/Research/paper-evals/arc-tests/boom/./build/verilator-large-O3-compile-time-warmup-2/boom.sv.v
             /home/bea/Research/paper-evals/arc-tests/boom/./build/verilator-large-O3-compile-time-warmup-2/boom.sv.sv
             /home/bea/Research/paper-evals/arc-tests/boom/./build/verilator-large-O3-compile-time-warmup-2/boom-vtor//home/bea/Research/paper-evals/arc-tests/boom/./build/verilator-large-O3-compile-time-warmup-2/boom.sv
             /home/bea/Research/paper-evals/arc-tests/boom/./build/verilator-large-O3-compile-time-warmup-2/boom-vtor//home/bea/Research/paper-evals/arc-tests/boom/./build/verilator-large-O3-compile-time-warmup-2/boom.sv.v
             /home/bea/Research/paper-evals/arc-tests/boom/./build/verilator-large-O3-compile-time-warmup-2/boom-vtor//home/bea/Research/paper-evals/arc-tests/boom/./build/verilator-large-O3-compile-time-warmup-2/boom.sv.sv
%Error: Exiting due to 2 error(s)

 Performance counter stats for '/usr/bin/verilator -O3 --noassert --x-assign fast --x-initial fast --threads 1 -sv -cc -Mdir /home/bea/Research/paper-evals/arc-tests/boom//./build/verilator-large-O3-compile-time-warmup-2//boom-vtor /home/bea/Research/paper-evals/arc-tests/boom//./build/verilator-large-O3-compile-time-warmup-2//boom.sv /home/bea/Research/paper-evals/arc-tests/boom/../verilator-stubs.sv -j 0 -DPRINTF_COND=0 -DASSERT_VERBOSE_COND=0 -DSTOP_COND=0 -Wno-WIDTH':

             61.94 msec task-clock:u                     #    1.529 CPUs utilized             
                 0      context-switches:u               #    0.000 /sec                      
                 0      cpu-migrations:u                 #    0.000 /sec                      
             4,240      page-faults:u                    #   68.456 K/sec                     
       156,257,460      cycles:u                         #    2.523 GHz                         (56.47%)
        16,481,827      stalled-cycles-frontend:u        #   10.55% frontend cycles idle        (56.47%)
       105,840,420      instructions:u                   #    0.68  insn per cycle            
                                                  #    0.16  stalled cycles per insn     (57.79%)
        26,522,135      branches:u                       #  428.207 M/sec                       (50.29%)
         3,028,270      branch-misses:u                  #   11.42% of all branches             (21.58%)
       100,295,655      L1-dcache-loads:u                #    1.619 G/sec                       (46.55%)
         2,202,842      L1-dcache-load-misses:u          #    2.20% of all L1-dcache accesses   (46.55%)
   <not supported>      LLC-loads:u                                                           
   <not supported>      LLC-load-misses:u                                                     
        26,302,597      L1-icache-loads:u                #  424.663 M/sec                       (46.51%)
           438,421      L1-icache-load-misses:u          #    1.67% of all L1-icache accesses   (46.54%)
           570,206      dTLB-loads:u                     #    9.206 M/sec                       (46.58%)
            20,792      dTLB-load-misses:u               #    3.65% of all dTLB cache accesses  (46.58%)
           768,332      iTLB-loads:u                     #   12.405 M/sec                       (44.51%)
            14,798      iTLB-load-misses:u               #    1.93% of all iTLB cache accesses  (47.87%)
           825,733      L1-dcache-prefetches:u           #   13.332 M/sec                       (60.32%)
   <not supported>      L1-dcache-prefetch-misses:u                                           

       0.040499381 seconds time elapsed

       0.058527000 seconds user
       0.003249000 seconds sys


GROUP: verilator SUBGROUP: clang
